@@ -8,6 +8,7 @@
 - Fixed time signature editor popping-up when opening a file
 - Fixed rounding issues when zooming
 - Fixed playback ending too quickly
+- Allowed moving notes by octave with shift+up/down
 
 1.2b4
 - Switched to unified (native) toolbar on mac  (WARNING: requires patching wxWidgets, see docs)
